# murasame-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml
src/plugins/discord_sync/: __init__.py  config.py
src/plugins/mc_sync/: __init__.py
src/plugins/ping/: __init__.py
